@@ -3321,18 +3321,21 @@ int req_jobobit(
       if (pjob == NULL)
         return(PBSE_UNKJOBID);
       
-      job_atr_hold = pjob->ji_wattr[JOB_ATR_hold].at_val.at_long;
-      job_exit_status = pjob->ji_qs.ji_un.ji_exect.ji_exitstat;
-      
-      unlock_ji_mutex(pjob, __func__, "7", LOGLEVEL);
-
-      update_array_values(pa, JOB_STATE_RUNNING, aeTerminate,
-          job_id, job_atr_hold, job_exit_status);
+      if (pa != NULL)
+        {
+        job_atr_hold = pjob->ji_wattr[JOB_ATR_hold].at_val.at_long;
+        job_exit_status = pjob->ji_qs.ji_un.ji_exect.ji_exitstat;
         
-      unlock_ai_mutex(pa, __func__, "1", LOGLEVEL);
-      pjob = svr_find_job(job_id, TRUE);
-      if (pjob == NULL)
-        return(PBSE_UNKJOBID);
+        unlock_ji_mutex(pjob, __func__, "7", LOGLEVEL);
+
+        update_array_values(pa, JOB_STATE_RUNNING, aeTerminate,
+            job_id, job_atr_hold, job_exit_status);
+          
+        unlock_ai_mutex(pa, __func__, "1", LOGLEVEL);
+        pjob = svr_find_job(job_id, TRUE);
+        if (pjob == NULL)
+          return(PBSE_UNKJOBID);
+        }
       }
 
     if (LOGLEVEL >= 4)
